Fix: flexbox issue on IE11

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -26,6 +26,7 @@
   vertical-align: top;
   height: 100%;
   margin-right: 7px;
+  flex-shrink: 0;
 }
 
 .main-column {
@@ -37,6 +38,7 @@
   box-sizing: border-box;
   vertical-align: top;
   height: 100%;
+  flex-shrink: 0;
 
   display: flex;
   flex-direction: column;
